# internal/api/http/handlers/healt.go
@@ -1,14 +1,31 @@
 package handlers
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
+	httpapi "purchase-cart-service/internal/api/http"
+)
 
 type HealthCheckHandler struct {
 }
 
+func NewHealthCheckHandler() *HealthCheckHandler {
+	return &HealthCheckHandler{}
+}
+
+func (h *HealthCheckHandler) GetHandlers() []httpapi.HandlersMethods {
+	return []httpapi.HandlersMethods{
+		{
+			Method:  "GET",
+			Route:   "/health",
+			Handler: h.Healthcheck,
+		},
+	}
+}
+
 // Health check
 // @Summary Health check
-// @Description Verifica lo stato del servizio
 // @Tags health
+// @Produce json
 // @Success 200 {string} string "ok"
 // @Router /health [get]
 func (h *HealthCheckHandler) Healthcheck(c *gin.Context) {
